welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:3: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.blue)
^